# Mindawaker-Studio

./: .env.example  .gitignore  Makefile  PROJECT_STATUS.md  README.md  continuous_exponential_story_en.py  exp_growth_story_en.py  installs.txt  logistic_growth_story_en.py  pyproject.toml  requirements.txt  start.py  test_api.py  test_math.py  test_math_direct.py  test_math_pipeline.py
3d-t2i/: .gitignore  README.md  check_depth_files.py  debug_camera.py  debug_reference_generation.py  debug_workflow.py  demo_single_shot.py  diagnose_model.py  generate.py  requirements.txt  test_character_library.py  test_depth_fix.py  test_multi_view_references.py  test_queue.py  test_view_prompts.py  test_workflow_simple.json  test_workflow_strings.json
3d-t2i/app/: __init__.py
3d-t2i/configs/: default.yaml
3d-t2i/data/: character_library.json
3d-t2i/docs/: consistency_guide.md  hierarchical_architecture.md
3d-t2i/examples/: consistency_demo.py  hierarchical_demo.py
3d-t2i/tests/: test_prompt_builder.py  test_scene_builder.py  test_shot_parser.py
app/: main.py
app/configs/: constants.py  exceptions.py  logging_config.py  settings.json
app/diffusion_pipeline/: image_diffuser.py
app/image_engine/: flux_engine.py  mw_3d_guided_engine.py  volc_engine.py
app/langchain_pipeline/: base_text.py  math_structure.py  story_structure.py  text_generation_chain.py
app/math_anim/: __init__.py  math_nodes.py  math_renderer.py
app/model/: audio_schema.py  image_schema.py  settings_schema.py  story_visual_schema.py  text_schema.py  video_retrieval_schema.py  video_schema.py
app/router/: audio_router.py  image_router.py  projects_router.py  settings_router.py  text_router.py  video_retrieval_router.py  video_router.py
app/service/: animate_math_layers.py  audio_service.py  base_pipeline.py  content_service.py  create_math_video.py  (+10 more)
media_service/: .gitignore  README.md  app.py  requirements.txt  retrieve_media.py  start.py  tag_media.py
mindawaker-web/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
tests/: conftest.py  test_main.py  test_task_manager.py
(+142 files in other folders)
